# TFM

./: .gitignore  CMakeLists.txt  addDeadCells.cc  albedoKernel.cu  albedoKernel.h  comandos.txt  convertGrids.sh  converter.cc  formulaRender.txt  kernels.cu  kernels.h  main.cc  main_clean.cc  nanoVdb.cc  plotVariables.py  pruebaThrust.cu  pruebaThrust.h
Grids/: TAF.vdb
utilGrid/: Grid.hpp
utilsSkin/: utilSkin.hpp
